# forge-index

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/forge-index/: Cargo.toml
crates/forge-index-api/: Cargo.toml
crates/forge-index-api/src/: error.rs  lib.rs  response.rs  server.rs  tests.rs
crates/forge-index-api/src/graphql/: filters.rs  handler.rs  mod.rs  pagination.rs  resolver.rs  schema_gen.rs  types.rs
crates/forge-index-api/src/handlers/: health.rs  metrics.rs  mod.rs  ready.rs  schema_info.rs  sql.rs
crates/forge-index-api/src/middleware/: cors.rs  mod.rs  tracing.rs
crates/forge-index-api/src/sql/: executor.rs  mod.rs  parser.rs  result.rs
crates/forge-index-cli/: Cargo.toml
crates/forge-index-cli/src/: lib.rs  main.rs  process.rs  tests.rs  watcher.rs
crates/forge-index-cli/src/commands/: codegen.rs  dev.rs  migrate.rs  mod.rs  start.rs
crates/forge-index-config/: Cargo.toml
crates/forge-index-config/src/: account.rs  block_interval.rs  builder.rs  chain.rs  contract.rs  database.rs  lib.rs  ordering.rs  schema.rs  validation.rs
crates/forge-index-core/: Cargo.toml
crates/forge-index-core/src/: error.rs  lib.rs
crates/forge-index-core/src/abi/: decoder.rs  mod.rs  parser.rs  tests.rs  types.rs
crates/forge-index-core/src/registry/: event_registry.rs  handler.rs  mod.rs  setup.rs
crates/forge-index-core/src/types/: address.rs  block.rs  event.rs  hash.rs  log.rs  mod.rs  trace.rs  transaction.rs
crates/forge-index-db/: Cargo.toml
crates/forge-index-db/src/: buffer.rs  context.rs  error.rs  handler.rs  lib.rs  manager.rs  query.rs  reorg.rs  row.rs  tests.rs
crates/forge-index-decode/: Cargo.toml
crates/forge-index-decode/src/: lib.rs
crates/forge-index-graphql/: Cargo.toml
crates/forge-index-graphql/src/: lib.rs
crates/forge-index-handler/: Cargo.toml
crates/forge-index-handler/src/: lib.rs
crates/forge-index-rpc/: Cargo.toml
crates/forge-index-rpc/src/: cached_client.rs  client.rs  dedup.rs  error.rs  lib.rs  rate_limiter.rs  retry.rs  transport.rs  types.rs
crates/forge-index-rpc/src/cache/: keys.rs  migrations.rs  mod.rs  store.rs  tests.rs
crates/forge-index-server/: Cargo.toml
crates/forge-index-server/src/: lib.rs
crates/forge-index-store/: Cargo.toml
crates/forge-index-store/src/: lib.rs
crates/forge-index-sync/: Cargo.toml
crates/forge-index-sync/src/: error.rs  factory.rs  lib.rs  tests.rs
crates/forge-index-sync/src/backfill/: coordinator.rs  mod.rs  planner.rs  progress.rs  worker.rs
crates/forge-index-sync/src/realtime/: finality.rs  mod.rs  processor.rs  subscriber.rs
crates/forge-index-sync/src/reorg/: chain_state.rs  detector.rs  handler.rs  mod.rs
crates/forge-index-telemetry/: Cargo.toml
crates/forge-index-telemetry/src/: build_id.rs  lib.rs  logging.rs  metrics.rs
crates/forge-index/benches/: db_write.rs  event_processing.rs  rpc_cache.rs
crates/forge-index/src/: builder.rs  context.rs  lib.rs  prelude.rs  runner.rs  shutdown.rs  tests.rs
crates/forge-index/tests/: backfill_test.rs  factory_test.rs  graphql_test.rs  realtime_test.rs  reorg_test.rs  sql_test.rs
crates/forge-index/tests/common/: fixtures.rs  mock_rpc.rs  mod.rs  test_db.rs
docs/: architecture.md  config-reference.md  deployment.md  graphql-api.md  migration-from-ponder.md  performance.md  schema-reference.md  sql-api.md
examples/erc20/: .env.sample  Cargo.toml  README.md
examples/erc20/abis/: ERC20.json
examples/erc20/src/: lib.rs  main.rs  schema.rs
examples/erc20/src/handlers/: approval.rs  mod.rs  transfer.rs
examples/erc20/tests/: integration_test.rs
examples/nft/: .env.sample  Cargo.toml  README.md
examples/nft/abis/: ERC721.json
examples/nft/src/: lib.rs  main.rs  schema.rs
examples/nft/src/handlers/: block.rs  mod.rs  setup.rs  transfer.rs
examples/nft/tests/: integration_test.rs
examples/uniswap-v3/: .env.sample  Cargo.toml  README.md
examples/uniswap-v3/abis/: UniswapV3Factory.json  UniswapV3Pool.json
examples/uniswap-v3/src/: lib.rs  main.rs  schema.rs
examples/uniswap-v3/src/handlers/: initialize.rs  mint.rs  mod.rs  pool_created.rs  swap.rs
examples/uniswap-v3/tests/: integration_test.rs
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: forge-index.json
monitoring/grafana/provisioning/dashboards/: forge.yml
