[workspace]
resolver = "2"
members = [
    "crates/forge-index-core",
    "crates/forge-index-config",
    "crates/forge-index-rpc",
    "crates/forge-index-sync",
    "crates/forge-index-decode",
    "crates/forge-index-store",
    "crates/forge-index-handler",
    "crates/forge-index-graphql",
    "crates/forge-index-server",
    "crates/forge-index-cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.8", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
axum = { version = "0.7" }
async-graphql = { version = "7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
clap = { version = "4", features = ["derive"] }
metrics = "0.23"
metrics-exporter = "6"
sha2 = "0.10"
hex = "0.4"
bytes = "1"
futures = "0.3"
notify = "6"
toml = "0.8"
tokio-retry = "0.3"
wiremock = "0.6"
testcontainers = "0.20"
testcontainers-modules = { version = "0.9", features = ["postgres"] }
criterion = { version = "0.5", features = ["async_tokio"] }
dashmap = "6"
