[package]
name = "forge-index-api"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-index-config = { path = "../forge-index-config" }
axum = { workspace = true }
async-graphql = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
sqlx = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
tower = "0.5"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
