[package]
name = "forge-index-config"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-index-core = { path = "../forge-index-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
