[package]
name = "forge-index-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
