[package]
name = "forge-index-db"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-index-core = { path = "../forge-index-core" }
forge-index-config = { path = "../forge-index-config" }
forge-index-telemetry = { path = "../forge-index-telemetry" }
anyhow = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
